--- a/src/components/Title/styles.module.css
+++ b/src/components/Title/styles.module.css
@@ -55,3 +55,13 @@
   visibility: hidden;
   letter-spacing: 5px;
 }
+
+@media screen and (max-width: 996px) {
+  .text {
+    font-size: 3rem;
+  }
+
+  .hidden {
+    font-size: 3rem;
+  }
+}
