--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,9 +6,10 @@
 .heroBanner {
   height: 100vh;
   padding: 4rem 0;
-  background-image: url("/img/BedRoom.jpg");
+  background-image: url("/img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -17,5 +18,6 @@
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
+    min-height: 90vh;
   }
 }
