--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -16,12 +16,25 @@
     transform: translate(0px, 0px) scale(1); /* Final state */
   }
 }
+
+.heroBanner {
+  height: 100vh;
+  padding: 4rem 0;
+  background-image: url("/img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
 .animate {
   animation: springBounce 1s cubic-bezier(0.23, 1, 0.67, 1.16) forwards;
   opacity: 0;
 }
 
-.container {
+.headerContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -56,12 +69,42 @@
   letter-spacing: 5px;
 }
 
-@media screen and (max-width: 996px) {
+.subTitle {
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 430px) {
+  .heroBanner {
+    padding: 2rem;
+  }
+
+  .text {
+    font-size: 2rem;
+  }
+
+  .hidden {
+    font-size: 2rem;
+  }
+
+  .subTitle {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 430px) and (max-width: 996px) {
+  .heroBanner {
+    padding: 2rem;
+  }
+
   .text {
     font-size: 3rem;
   }
 
   .hidden {
     font-size: 3rem;
+  }
+
+  .subTitle {
+    font-size: 1.2rem;
   }
 }
